# lib/api-spec/openapi.yaml
@@ -783,6 +783,8 @@ components:
           type: ["string", "null"]
         robloxAvatarUrl:
           type: ["string", "null"]
+        discordUsername:
+          type: ["string", "null"]
         role:
           type: string
           enum: [admin, collaborator]
@@ -807,6 +809,8 @@ components:
         role:
           type: string
           enum: [admin, collaborator]
+        discordUsername:
+          type: ["string", "null"]
         subroles:
           type: array
           items:
@@ -822,6 +826,8 @@ components:
         role:
           type: string
           enum: [admin, collaborator]
+        discordUsername:
+          type: ["string", "null"]
         subroles:
           type: array
           items:
